--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Tabata Timer</string>
+    <string name="enable_night_theme">Enable the night theme</string>
+    <string name="select_font_size">Select font size</string>
+    <string name="clear">Clear</string>
+    <string name="press_this_to_clear_data">Press this button to clear all stored data</string>
+    <string name="select_language">Select the language</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="english">English</string>
+    <string name="russian">Russian</string>
 </resources>
