--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
-    <string name="app_name">Tabata Timer</string>
+    <string name="app_name" translatable="false">Tabata Timer</string>
     <string name="enable_night_theme">Enable the night theme</string>
     <string name="select_font_size">Select font size</string>
     <string name="clear">Clear</string>
-    <string name="press_this_to_clear_data">Press this button to clear all stored data</string>
+    <string name="press_this_to_clear_data">Press this button to clear all stored data (this will also reset all settings to default)</string>
     <string name="select_language">Select the language</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
     <string name="large">Large</string>
     <string name="english">English</string>
     <string name="russian">Russian</string>
+    <string name="russian_loc" translatable="false">ru</string>
+    <string name="english_loc" translatable="false">en</string>
+    <string name="only_after_app_restart">This will apply only after the app restart</string>
 </resources>
