--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -11,4 +11,5 @@
     <string name="english">Английский</string>
     <string name="russian">Русский</string>
     <string name="only_after_app_restart">Применится только после перезапуска приложения</string>
+    <string name="home_activity">Домашнаяя активность</string>
 </resources>
