recycler view phase item

--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,4 +25,6 @@
     <string name="title">Название</string>
     <string name="repetitions_number">Количество повторений</string>
     <string name="color">Цвет</string>
+    <string name="description">Описание</string>
+    <string name="duration">Продолжительность</string>
 </resources>
