--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="title">Title</string>
     <string name="repetitions_number">Repetitions number</string>
     <string name="color">Color</string>
+    <string name="description">Description</string>
+    <string name="duration">Duration</string>
 </resources>
