adding sequences works

--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -28,4 +28,5 @@
     <string name="description">Описание</string>
     <string name="duration">Продолжительность (секунд)</string>
     <string name="save">Сохранить</string>
+    <string name="training">Тренировка</string>
 </resources>
