--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="description">Description</string>
     <string name="duration">Duration (seconds)</string>
     <string name="save">Save</string>
+    <string name="training">Training</string>
 </resources>
