delete all data

--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -29,4 +29,5 @@
     <string name="duration">Продолжительность (секунд)</string>
     <string name="save">Сохранить</string>
     <string name="training">Тренировка</string>
+    <string name="cannot_set_duration_less">Невозможно установить продолжительность меньше 1!</string>
 </resources>
