dummy run button

--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="save">Save</string>
     <string name="training">Training</string>
     <string name="cannot_set_duration_less">Cannot set duration less than 1!</string>
+    <string name="run">Run</string>
 </resources>
