add dummy timer service

--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -32,6 +32,7 @@
     <string name="cannot_set_duration_less">Невозможно установить продолжительность меньше 1!</string>
     <string name="run">Запуск</string>
     <string name="pause">Пауза</string>
+    <string name="resume">Продолжить</string>
     <string name="back">Назад</string>
     <string name="forth">Вперёд</string>
 </resources>
