--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="cannot_set_duration_less">Cannot set duration less than 1!</string>
     <string name="run">Run</string>
     <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
     <string name="back">Back</string>
     <string name="forth">Forth</string>
 </resources>
