--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="enable_night_theme">Enable the night theme</string>
     <string name="select_font_size">Select font size</string>
     <string name="clear">Clear</string>
-    <string name="press_this_to_clear_data">Press this button to clear all stored data (this will also reset all settings to default)</string>
+    <string name="press_this_to_clear_data">Press this button to delete all sequences</string>
     <string name="select_language">Select the language</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
