--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -35,4 +35,5 @@
     <string name="resume">Старт</string>
     <string name="back">Назад</string>
     <string name="forth">Вперёд</string>
+    <string name="training_already_finished">Тренировка уже закончена!</string>
 </resources>
