--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="save">Save</string>
     <string name="training">Training</string>
     <string name="cannot_set_duration_less">Cannot set duration less than 1!</string>
+    <string name="cannot_set_rep_num_less">Cannot set repetitions number less than 1!</string>
     <string name="run">Run</string>
     <string name="pause">Stop</string>
     <string name="resume">Start</string>
