--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -37,4 +37,5 @@
     <string name="back">Назад</string>
     <string name="forth">Вперёд</string>
     <string name="training_already_finished">Тренировка уже закончена!</string>
+    <string name="add_phase">Добавить фазу</string>
 </resources>
