--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="back">Back</string>
     <string name="forth">Forth</string>
     <string name="training_already_finished">Training already finished!</string>
+    <string name="add_phase">Add phase</string>
 </resources>
