--- a/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
+++ b/TabataTimer/app/src/main/res/values-ru-rRU/strings.xml
@@ -38,4 +38,5 @@
     <string name="forth">Вперёд</string>
     <string name="training_already_finished">Тренировка уже закончена!</string>
     <string name="add_phase">Добавить фазу</string>
+    <string name="cannot_delete_all_phases">Нельзя удалить все фазы!</string>
 </resources>
