--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="forth">Forth</string>
     <string name="training_already_finished">Training already finished!</string>
     <string name="add_phase">Add phase</string>
+    <string name="cannot_delete_all_phases">Cannot delete all phases!</string>
 </resources>
