--- a/TabataTimer/app/src/main/res/values/strings.xml
+++ b/TabataTimer/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="training_already_finished">Training already finished!</string>
     <string name="add_phase">Add phase</string>
     <string name="cannot_delete_all_phases">Cannot delete all phases!</string>
+    <string name="already_on_top">This phase is already on top!</string>
+    <string name="already_on_bottom">This phase is already on bottom!</string>
 </resources>
